# xlsx_evaluate

./: .flake8  .gitignore  CHANGELOG.md  pyproject.toml  readme.md  whitelist.txt
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/: number_precision.rst  registry_function.rst  support.rst  support_functions.rst  test.rst
examples/common_use/: 001.data.json  common_use.py
examples/dict_example/: 001.dict_example.py
examples/rounding_example/: rounding_example.py
tests/: test_ast_nodes.py  test_crossrefs.py  test_evaluator.py  test_example.py  test_model.py  test_parser.py  test_reader.py  test_tokenizer.py  test_xltypes.py  testing.py
tests/functions/: test_date.py  test_engineering.py  test_financial.py  test_information.py  test_logical.py  test_lookup.py  test_math.py  test_operator.py  test_statistics.py  test_text.py  test_xl.py  test_xlcriteria.py  test_xlerrors.py  test_xltypes.py
tests/functions_vs_excel/: abs_test.py  acos_test.py  asin_test.py  atan2_test.py  atan_test.py  average_test.py  ceiling_test.py  choose_test.py  concat_test.py  concatenate_test.py  cos_test.py  cosh_test.py  count_test.py  counta_test.py  countif_test.py  countifs_test.py  date_test.py  datedif_test.py  day_test.py  days_test.py  double_minus_test.py  edate_test.py  engineering_test.py  eomonth_test.py  exact_test.py  find_test.py  if_test.py  information_test.py  int_test.py  ln_test.py  (+26 more)
xlsx_evaluate/: __init__.py  ast_nodes.py  evaluate.py  evaluator.py  model.py  parser.py  patch.py  reader.py  tokenizer.py  utils.py  xlsx_types.py  xltypes.py
(+18 files in other folders)
